tested full integration + email

--- a/Proiect/Main.xaml
+++ b/Proiect/Main.xaml
@@ -104,7 +104,7 @@
       <AssemblyReference>C19AC53BB95_v2_sub_c.r407V3gtfDH10Qa5WpApvT2</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main" sap:VirtualizedContainerService.HintSize="809.2,876" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main" sap:VirtualizedContainerService.HintSize="701.2,875.9999999999999" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="str_ExcelPath" />
       <Variable x:TypeArguments="x:String" Name="str_Ticker" />
@@ -129,12 +129,12 @@
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Process_NewsAI - Invoke Workflow File (Process_NewsAI.xaml)" sap:VirtualizedContainerService.HintSize="449.6,180.8" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Process_NewsAI.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_PDFPath" />
-        <OutArgument x:TypeArguments="x:String" x:Key="out_SummaryText" />
+        <OutArgument x:TypeArguments="x:String" x:Key="out_PDFPath">[str_PdfPath]</OutArgument>
+        <OutArgument x:TypeArguments="x:String" x:Key="out_SummaryText">[str_AISummary]</OutArgument>
         <InArgument x:TypeArguments="x:String" x:Key="in_StockTicker">[str_Ticker]</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" Cc="{x:Null}" ContinueOnError="{x:Null}" MailMessage="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" UseRichTextEditor="{x:Null}" AttachmentsCollection="[{str_ExcelPath, str_PdfPath}]" Body="[&quot;Salut, iată analiza generată de AI:&quot; + vbCrLf + vbCrLf + str_AISummary]" ConnectionMode="Undefined" DisplayName="Send Outlook Desktop Mail Message" sap:VirtualizedContainerService.HintSize="449.6,217.6" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" Importance="Normal" IsBodyHtml="False" IsDraft="False" Sensitivity="Normal" Subject="[&quot;Raport complet pentru &quot; + str_Ticker]" To="andrei-delian.dan@s.unibuc.ro" UseISConnection="False">
+    <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" Cc="{x:Null}" ContinueOnError="{x:Null}" MailMessage="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" UseRichTextEditor="{x:Null}" AttachmentsCollection="[{ &quot;Report_&quot; + str_Ticker.Trim() + &quot;.pdf&quot; }]" Body="[&quot;Salut, iată analiza generată de AI:&quot; + vbCrLf + vbCrLf + str_AISummary]" ConnectionMode="LegacyConfiguration" DisplayName="Send Outlook Desktop Mail Message" sap:VirtualizedContainerService.HintSize="449.6,217.6" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" Importance="Normal" IsBodyHtml="False" IsDraft="False" Sensitivity="Normal" Subject="[&quot;Raport complet pentru &quot; + str_Ticker]" To="andrei-delian.dan@s.unibuc.ro" UseISConnection="False">
       <ui:SendOutlookMail.ConnectionDetailsBackupSlot>
         <usau:BackupSlot x:TypeArguments="umae:ConnectionDetails" StoredValue="{x:Null}">
           <usau:BackupSlot.BackupValues>
